--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,19 @@
+# Hardhat
+artifacts/
+cache/
+
 # Node modules
-/node_modules
+node_modules/
 
-# Compilation output
-/dist
+# Environment files
+.env
+.env.local
 
-# pnpm deploy output
-/bundle
-
-# Hardhat Build Artifacts
-/artifacts
-
-# Hardhat compilation (v2) support directory
-/cache
-
-# Typechain output
-/types
-
-# Hardhat coverage reports
-/coverage
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
